# signatory

./: MANIFEST.in  pyproject.toml  setup.py
src/: pytorchbind.cpp
src/signatory/: __init__.py  path.py
