[build-system]
requires = ["setuptools >= 61.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "signatory"
version = "1.2.7"
authors = [{ name = "Patrick Kidger" }]
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
description = "Differentiable computations of the signature and logsignature transforms, on both CPU and GPU."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["torch"]
